[gd_scene load_steps=24 format=3 uid="uid://s00ux2wsh87x"]

[ext_resource type="Script" path="res://Menu/settings.gd" id="1_3ygdo"]
[ext_resource type="Texture2D" uid="uid://bn7ofxq610cnd" path="res://Utilities/menu/settings_overlay.png" id="1_q6f8s"]
[ext_resource type="Texture2D" uid="uid://ry76fr40bh1x" path="res://Utilities/menu/mainmenu_background.png" id="2_gm1aj"]
[ext_resource type="PackedScene" uid="uid://c6b1dgadp0jag" path="res://Menu/input_button.tscn" id="2_kmcen"]
[ext_resource type="FontFile" uid="uid://calx8htg8hbrm" path="res://Utilities/Font/type_writer.ttf" id="3_p4n82"]
[ext_resource type="Script" path="res://Menu/audio_options.gd" id="5_ey6ff"]
[ext_resource type="Script" path="res://Menu/volume_slider.gd" id="7_1im26"]
[ext_resource type="AudioStream" uid="uid://hykx2fcd47vd" path="res://audio/sfx/Menu/Button.wav" id="7_1m1r3"]
[ext_resource type="PackedScene" uid="uid://2odudghbircb" path="res://Characters/tree_dummy.tscn" id="8_bfuqk"]
[ext_resource type="AudioStream" uid="uid://baw484xopw2n1" path="res://audio/music/main menu music (memory of the lost).wav" id="9_111gq"]
[ext_resource type="Shader" path="res://Characters/flash.gdshader" id="9_lvj7p"]
[ext_resource type="Script" path="res://Menu/testing_area.gd" id="10_8rsl8"]
[ext_resource type="PackedScene" uid="uid://cubcpgdntlnmq" path="res://Characters/player.tscn" id="10_p4a4r"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0lvro"]
texture = ExtResource("2_gm1aj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l57ye"]
texture = ExtResource("1_q6f8s")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4uvjp"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_obkwh"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t1giq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3chvb"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4svi"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fp67l"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wrme"]
bg_color = Color(0.381703, 0.381703, 0.381703, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_slpiv"]
resource_local_to_scene = true
shader = ExtResource("9_lvj7p")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0
shader_parameter/contrast = 1.0
shader_parameter/fade_alpha = 1.0

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ygdo")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_0lvro")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_l57ye")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
offset_top = 32.0
offset_right = 261.0
offset_bottom = 328.0
scale = Vector2(0.54, 0.54)
theme_override_styles/panel = SubResource("StyleBoxFlat_4uvjp")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="InputButton" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_kmcen")]
layout_mode = 2

[node name="InputButton2" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_kmcen")]
layout_mode = 2

[node name="InputButton3" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_kmcen")]
layout_mode = 2

[node name="InputButton4" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_kmcen")]
layout_mode = 2

[node name="InputButton5" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_kmcen")]
layout_mode = 2

[node name="InputButton6" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_kmcen")]
layout_mode = 2

[node name="InputButton7" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_kmcen")]
layout_mode = 2

[node name="InputButton8" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_kmcen")]
layout_mode = 2

[node name="InputButton9" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_kmcen")]
layout_mode = 2

[node name="ResetButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_p4n82")
theme_override_font_sizes/font_size = 10
text = "reset to default"

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -13.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_pressed_color = Color(0.281428, 0.285774, 0.287634, 1)
theme_override_fonts/font = ExtResource("3_p4n82")
theme_override_font_sizes/font_size = 6
theme_override_styles/focus = SubResource("StyleBoxFlat_obkwh")
theme_override_styles/hover = SubResource("StyleBoxFlat_t1giq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3chvb")
theme_override_styles/normal = SubResource("StyleBoxFlat_v4svi")
text = "Back
"

[node name="AudioOptions" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_ey6ff")

[node name="PanelContainer2" type="PanelContainer" parent="AudioOptions"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 172.0
offset_right = 267.0
offset_bottom = 280.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
theme_override_styles/panel = SubResource("StyleBoxFlat_fp67l")

[node name="VBoxContainer" type="VBoxContainer" parent="AudioOptions/PanelContainer2"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="AudioOptions/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("3_p4n82")
theme_override_font_sizes/font_size = 10
text = "Master"

[node name="MasterSlider" type="HSlider" parent="AudioOptions/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
max_value = 1.0
step = 0.001
script = ExtResource("7_1im26")
bus_name = "Master"

[node name="SFXLabel" type="Label" parent="AudioOptions/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("3_p4n82")
theme_override_font_sizes/font_size = 10
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="AudioOptions/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
max_value = 1.0
step = 0.01
script = ExtResource("7_1im26")
bus_name = "SFX"

[node name="MusicLabel" type="Label" parent="AudioOptions/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("3_p4n82")
theme_override_font_sizes/font_size = 10
text = "Music"

[node name="MusicSlider" type="HSlider" parent="AudioOptions/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
max_value = 1.0
step = 0.01
script = ExtResource("7_1im26")
bus_name = "Music"

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_1m1r3")
volume_db = -10.0

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_111gq")
bus = &"Music"

[node name="Panel2" type="Panel" parent="."]
z_index = 1
y_sort_enabled = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.433
anchor_top = 0.115
anchor_right = 0.933
anchor_bottom = 0.611
offset_left = 0.159988
offset_top = -0.0500011
offset_right = -0.340027
offset_bottom = 0.0299988
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0wrme")
script = ExtResource("10_8rsl8")

[node name="TreeDummy" parent="Panel2" instance=ExtResource("8_bfuqk")]
position = Vector2(122, 63)

[node name="Player" parent="Panel2" instance=ExtResource("10_p4a4r")]
position = Vector2(61, 99)

[node name="Sprite2D" parent="Panel2/Player/Smoothing2D" index="1"]
material = SubResource("ShaderMaterial_slpiv")

[node name="AnimationTree" parent="Panel2/Player" index="10"]
parameters/Charge/blend_position = Vector2(0, 0)

[node name="Camera2D" parent="Panel2/Player" index="11"]
enabled = false

[node name="AbyssUnderlay" parent="Panel2/Player/CanvasLayer" index="5"]
position = Vector2(327.41, 158)

[node name="AbyssOverlay" parent="Panel2/Player/CanvasLayer" index="6"]
position = Vector2(327, 158)

[node name="TransformFireBar" parent="Panel2/Player/CanvasLayer" index="7"]
position = Vector2(412, 158)

[node name="DashCharge1" parent="Panel2/Player/CanvasLayer" index="8"]
position = Vector2(237.5, 159)

[node name="DashCharge2" parent="Panel2/Player/CanvasLayer" index="9"]
position = Vector2(248, 159)

[node name="DashCharge3" parent="Panel2/Player/CanvasLayer" index="10"]
position = Vector2(258.5, 159)

[node name="Manabar" parent="Panel2/Player/CanvasLayer" index="12"]
offset_left = 27.305
offset_top = -114.0
offset_right = 171.805
offset_bottom = -110.0

[node name="Label" parent="Panel2/Player/CanvasLayer" index="13"]
offset_left = 424.0
offset_top = 155.5
offset_right = 464.0
offset_bottom = 178.5

[node name="Time" parent="Panel2/Player/CanvasLayer" index="14"]
visible = false

[node name="DashMeter" parent="Panel2/Player/CanvasLayer" index="15"]
offset_left = 234.0
offset_top = 156.0
offset_right = 264.0
offset_bottom = 160.0

[node name="Area2D" type="StaticBody2D" parent="Panel2"]
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Panel2/Area2D"]
polygon = PackedVector2Array(236, 0, 240, 4, 240, 129, 236, 134, 3, 134, 0, 130, 0, 3, 4, 0, 236, 0, 231, -5, -5, -4, -5, 136, 245, 136, 243, -3)

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="drag_ended" from="AudioOptions/PanelContainer2/VBoxContainer/MasterSlider" to="." method="_on_master_slider_drag_ended"]
[connection signal="mouse_exited" from="AudioOptions/PanelContainer2/VBoxContainer/MasterSlider" to="AudioOptions" method="_on_master_slider_mouse_exited"]
[connection signal="drag_ended" from="AudioOptions/PanelContainer2/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="mouse_exited" from="AudioOptions/PanelContainer2/VBoxContainer/SFXSlider" to="AudioOptions" method="_on_sfx_slider_mouse_exited"]
[connection signal="drag_ended" from="AudioOptions/PanelContainer2/VBoxContainer/MusicSlider" to="." method="_on_music_slider_drag_ended"]
[connection signal="mouse_exited" from="AudioOptions/PanelContainer2/VBoxContainer/MusicSlider" to="AudioOptions" method="_on_music_slider_mouse_exited"]
[connection signal="mouse_entered" from="Panel2" to="Panel2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Panel2" to="Panel2" method="_on_mouse_exited"]

[editable path="Panel2/Player"]
[editable path="Panel2/Player/HurtboxSlash"]
[editable path="Panel2/Player/Hurtbox"]
[editable path="Panel2/Player/Marker2D/HitBox"]
[editable path="Panel2/Player/Marker2D/HeavyHitBox"]
[editable path="Panel2/Player/CanvasLayer/Healthbar"]
[editable path="Panel2/Player/CanvasLayer/Manabar"]
